# Lumberjack

./: CMakeLists.txt  README.md
src/: cuttingplane.cpp  cuttingplane.h  mainlumberjack.cpp  matrix.cpp
